Restore bottom padding to prevent cut off of tab text ("g", "j", etc.)

--- a/webextensions/sidebar/styles/square/border.css
+++ b/webextensions/sidebar/styles/square/border.css
@@ -50,7 +50,7 @@
 
 .tab .label {
   margin-left: 0.25em;
-  padding: 0;
+  padding: 0 0 0.25em 0;
 }
 
 .tab.pinned {
